kustomize/overlays/prod/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resourcetracking-deployment
spec:
  template:
    spec:
      containers:
        - name: resourcetracking
          imagePullPolicy: IfNotPresent
