kustomize/overlays/prod/deployment_prod_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resourcetracking-deployment
  labels:
    app: resourcetracking-prod
spec:
  selector:
    matchLabels:
      app: resourcetracking-prod
  template:
    metadata:
      labels:
        app: resourcetracking-prod
    spec:
      containers:
      - name: resourcetracking
        image: ghcr.io/dbca-wa/resource_tracking:latest
        imagePullPolicy: IfNotPresent
