kustomize/overlays/prod/geoserver_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resourcetracking-geoserver
  labels:
    app: resourcetracking-geoserver
spec:
  selector:
    matchLabels:
      app: resourcetracking-geoserver
  template:
    metadata:
      labels:
        app: resourcetracking-geoserver
    spec:
      containers:
      - name: resourcetracking-geoserver
        volumeMounts:
          - mountPath: /data/geoserver
            name: resourcetracking-geoserver-data
      volumes:
        - name: resourcetracking-geoserver-data
          persistentVolumeClaim:
            claimName: resourcetracking-geoserver-data-prod
