kustomize/overlays/prod/geoserver_statefulset_patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: resourcetracking-geoserver
spec:
  serviceName: resourcetracking-geoserver-prod
  template:
    spec:
      containers:
      - name: resourcetracking-geoserver
        volumeMounts:
          - mountPath: /data/geoserver
            name: resourcetracking-geoserver-data
      volumes:
        - name: resourcetracking-geoserver-data
          persistentVolumeClaim:
            claimName: resourcetracking-geoserver-data-prod
