kustomize/overlays/prod/statefulset_prod_patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: resourcetracking-db-statefulset
spec:
  serviceName: resourcetracking-db-prod
  selector:
    matchLabels:
      workloadselector: resourcetracking-db-prod
  template:
    metadata:
      labels:
        workloadselector: resourcetracking-db-prod
    spec:
      containers:
      - name: resourcetracking-db
