kustomize/overlays/prod/valkey_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resourcetracking-valkey
spec:
  template:
    spec:
      containers:
        - name: resourcetracking-valkey
          volumeMounts:
            - name: valkey-config
              mountPath: /etc/valkey
              readOnly: true
      imagePullSecrets:
        - name: dhi-registry-secret-prod
      volumes:
        - name: valkey-config
          configMap:
            name: valkey-configmap-prod
            optional: false
