kustomize/overlays/prod/webserver_patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resourcetracking-webserver
spec:
  template:
    spec:
      containers:
        - name: resourcetracking
          imagePullPolicy: IfNotPresent
