kustomize/overlays/prod/geoserver_headless_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: resourcetracking-geoserver
spec:
  selector:
    app: resourcetracking-geoserver
    variant: prod
