kustomize/overlays/prod/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: resourcetracking-clusterip
spec:
  type: ClusterIP
  selector:
    app: resourcetracking-deployment
    variant: prod
---
apiVersion: v1
kind: Service
metadata:
  name: resourcetracking-valkey
spec:
  selector:
    app: resourcetracking-valkey
    variant: prod
