kustomize/overlays/prod/service_patch.yml
apiVersion: v1
kind: Service
metadata:
  name: resourcetracking-webserver
spec:
  type: ClusterIP
  selector:
    app: resourcetracking-webserver
    variant: prod
---
apiVersion: v1
kind: Service
metadata:
  name: resourcetracking-valkey
spec:
  selector:
    app: resourcetracking-valkey
    variant: prod
